# Sifter-AI

./: .env.example  .gitignore  README.md  UIwebsite.html  digest_preview.html  pyproject.toml
.github/workflows/: daily-pipeline.yml
scripts/: 001_initial_schema.sql  run_analysis.py  run_digest.py  run_hackernews.py  run_rss.py  validate_setup.py
src/: __init__.py  config.py  logging_config.py  models.py
src/analysis/: pipeline.py  prompts.py
src/digest/: generator.py
src/ingestion/: __init__.py  base.py  hackernews.py  orchestrator.py  rss.py
src/storage/: __init__.py  postgres_client.py  qdrant_client.py  tables.py
tests/: test_phase1.py
