[project]
name = "ai-intel-engine"
version = "0.1.0"
description = "AI Intelligence Engine — Automated signal detection, analysis & delivery pipeline"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-dotenv>=1.0,<2",
    "structlog>=24.1,<25",
    "httpx>=0.27,<1",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "qdrant-client>=1.9,<2",

    # AI / LLM
    "anthropic>=0.30,<1",
    "voyageai>=0.3,<1",

    # Ingestion
    "praw>=7.7,<8",
    "feedparser>=6.0,<7",
    "google-api-python-client>=2.130,<3",
    "youtube-transcript-api>=0.6,<1",
    "beautifulsoup4>=4.12,<5",
    "playwright>=1.44,<2",

    # Analysis
    "scikit-learn>=1.5,<2",
    "datasketch>=1.6,<2",

    # Digest & Email
    "jinja2>=3.1,<4",
    "resend>=2.0,<3",

    # API
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"
